--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -1,4 +1,4 @@
-= Résumé JavaScript Vanilla
+:notitle:
 :docinfo: private
 :source-highlighter: highlight.js
 :autofit-option:
@@ -7,9 +7,6 @@
 :revealjs_slideNumber: true
 :revealjs_history: true
 :revealjs_pdfseparatefragments: false
-:title-slide-background-image: images/soldat_ryan.jpg
-:title-slide-background-size: fill
-:title-slide-filter: blur(4px)
 :customcss: css/custom.css
 
 include::01_notions_de_base.adoc[]
