--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -9,7 +9,9 @@
 :revealjs_pdfseparatefragments: false
 :customcss: css/custom.css
 
+
 include::01_notions_de_base.adoc[]
 include::02_boucles.adoc[]
 include::03_fonctions.adoc[]
 include::04_collections.adoc[]
+include::05_objets.adoc[]
