--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -15,3 +15,4 @@ include::02_boucles.adoc[]
 include::03_fonctions.adoc[]
 include::04_collections.adoc[]
 include::05_objets.adoc[]
+include::06_dom.adoc[]
