--- a/slides/06_dom.adoc
+++ b/slides/06_dom.adoc
@@ -2,8 +2,6 @@
 
 === `Window`
 Quelques proprietés :
-
-[%step]
 --
 * `window.innerHeight`  -> Hauteur de la fenêtre
 * `window.innerWidth`  -> Largeur de la fenêtre
@@ -57,3 +55,320 @@ Comment accéder aux noeuds ?
 <1> `document.body.children[0]`
 <2> `document.body.children[1]`
 <3> `document.body.children[1].children[0]`
+
+[%auto-animate.columns]
+=== Les types de noeuds
+
+[.column]
+--
+* *ELEMENT_NODE* : `<p>` ou `<div>` par exemple
+* *TEXT_NODE* : Le texte actuel d'un élément
+* *PROCESSING_INSTRUCTION_NODE*
+* *COMMENT_NODE* : Un noeud `Comment`
+--
+
+[.column]
+--
+* *DOCUMENT_NODE* : Un noeud `Document`
+* *DOCUMENT_TYPE_NODE* : Un noeud `DocumentType` (<!DOCTYPE html> par exemple)
+* *DOCUMENT_FRAGMENT_NODE* : Un noeud `DocumentFragment`
+--
+
+[%auto-animate]
+=== Les types de noeuds
+WARNING: Les autres types de noeuds sont *dépréciés*.
+
+[%auto-animate]
+=== Manipulation des noeuds
+[source, html, highlight=2]
+----
+<body>
+  <h1 id ="titre">Titre</h1>
+  <p id = "paragraphe1"> Bonjour </p>
+  <div id="images">
+    <img src="https://www.iut.fr/info-2.jpg">
+    <img src="https://www.iut.fr/cours.jpeg">
+  </div>
+  <div id="uneDiv">
+    <p>Images de l'IUT<p>
+  <div>
+</body>
+----
+
+[source, javascript]
+----
+let node = document.getElementById("titre");
+console.log(node.nodeType);
+----
+
+[%step]
+`Output : Element node`
+
+[%auto-animate]
+=== Manipulation des noeuds
+[source, html, highlight=8..10]
+----
+<body>
+  <h1 id ="titre">Titre</h1>
+  <p id = "paragraphe1"> Bonjour </p>
+  <div id="images">
+    <img src="https://www.iut.fr/info-2.jpg">
+    <img src="https://www.iut.fr/cours.jpeg">
+  </div>
+  <div id="uneDiv">
+    <p>Images de l'IUT<p>
+  <div>
+</body>
+----
+
+[source, javascript]
+----
+let node = document.getElementById("uneDiv").firstElementChild.firstChild;
+console.log(node.nodeType);
+----
+
+[%step]
+`Output : Text node`
+
+[%auto-animate]
+=== Manipulation des noeuds
+[source, html, highlight=8..10]
+----
+<body>
+  <h1 id ="titre">Titre</h1>
+  <p id = "paragraphe1"> Bonjour </p>
+  <div id="images">
+    <img src="https://www.iut.fr/info-2.jpg">
+    <img src="https://www.iut.fr/cours.jpeg">
+  </div>
+  <div id="uneDiv">
+    <p>Images de l'IUT<p>
+  <div>
+</body>
+----
+
+[source, javascript]
+----
+let node = document.getElementById("uneDiv").firstElementChild.firstElementChild;
+console.log(node.nodeType);
+----
+
+[%step]
+WARNING: Erreur !
+
+
+[%auto-animate]
+=== Manipulation des noeuds
+TIP: Pour manipuler simplement du texte on utilisera :
+
+[source, javascript]
+----
+let valeur = document.getElementById("titre").textContent;
+console.log(valeur); // le texte "Titre"
+document.getElementById("titre").textContent = "Le titre a changé";
+----
+
+=== Accès aux noeuds
+Trois méthodes principales :
+[step=1]
+--
+[source, javascript]
+----
+let elementUnique = document.getElementById("personName")
+----
+--
+
+[step=2]
+--
+[source, javascript]
+----
+let htmlCollection = document.getElementsByTagName("div")<1>
+----
+<1> Tag = balise html
+--
+
+[step=3]
+--
+[source, javascript]
+----
+let nodeListe = document.querySelectorAll("un-selecteur-css")
+----
+--
+
+[%auto-animate]
+=== Modification du DOM
+
+[source, javascript, highlight=1;2|..3|..5|7..9|11|12|..]
+----
+let div = document.createElement('div');
+let paragraphe = document.createElement('p');
+let newtext = document.createTextNode("Valjean");
+paragraphe.appendChild(newText);
+div.appendChild(paragraphe);
+
+let otherParagraphe = document.createElement('p');
+let otherText = document.createTextNode("Bonjour");
+otherParagraphe.appendChild(otherText);
+
+div.insertBefore(otherParagraphe, paragraphe);
+div.remove();
+----
+
+[%auto-animate]
+=== Modification du DOM
+[source, html]
+----
+<body>
+    <div>
+        <p>Bonjour</p>
+        <p>Valjean</p>
+    </div>
+</body>
+----
+
+[%auto-animate]
+=== Se déplacer dans le DOM
+[source, html]
+----
+<body>
+    <div>
+        <a href="www.google.com">Un lien</a>
+        <p id="personName">Georges</p>
+        <img src="petitChat.png"/>
+    </div>
+</body>
+----
+
+[source, javascript, highlight=1|..2]
+----
+let node = document.getElementById("personName");
+console.log(node.parentNode)
+console.log(node.previousSibling)
+console.log(node.nextSibling)
+console.log(node.childNodes)
+----
+
+[%auto-animate]
+=== Se déplacer dans le DOM
+[source, html]
+----
+<body>
+    <div>
+        <a href="www.google.com">Un lien</a>
+        <p id="personName">Georges</p>
+        <img src="petitChat.png"/>
+    </div>
+</body>
+----
+
+[source, javascript, highlight=..2|..3]
+----
+let node = document.getElementById("personName");
+console.log(node.parentNode)<1>
+console.log(node.previousSibling)
+console.log(node.nextSibling)
+console.log(node.childNodes)
+----
+<1> `Output : <div>`
+
+[%auto-animate]
+=== Se déplacer dans le DOM
+[source, html]
+----
+<body>
+    <div>
+        <a href="www.google.com">Un lien</a>
+        <p id="personName">Georges</p>
+        <img src="petitChat.png"/>
+    </div>
+</body>
+----
+
+[source, javascript, highlight=..3|..4]
+----
+let node = document.getElementById("personName");
+console.log(node.parentNode)<1>
+console.log(node.previousSibling)<2>
+console.log(node.nextSibling)
+console.log(node.childNodes)
+----
+<1> `Output : <div>`
+<2> `Output : <a>`
+
+
+[%auto-animate]
+=== Se déplacer dans le DOM
+[source, html]
+----
+<body>
+    <div>
+        <a href="www.google.com">Un lien</a>
+        <p id="personName">Georges</p>
+        <img src="petitChat.png"/>
+    </div>
+</body>
+----
+
+[source, javascript, highlight=..4|..5]
+----
+let node = document.getElementById("personName");
+console.log(node.parentNode)<1>
+console.log(node.previousSibling)<2>
+console.log(node.nextSibling)<3>
+console.log(node.childNodes)
+----
+<1> `Output : <div>`
+<2> `Output : <a>`
+<3> `Output : <img>`
+
+[%auto-animate]
+=== Se déplacer dans le DOM
+[source, html]
+----
+<body>
+    <div>
+        <a href="www.google.com">Un lien</a>
+        <p id="personName">Georges</p>
+        <img src="petitChat.png"/>
+    </div>
+</body>
+----
+
+[source, javascript, highlight=..5]
+----
+let node = document.getElementById("personName");
+console.log(node.parentNode)<1>
+console.log(node.previousSibling)<2>
+console.log(node.nextSibling)<3>
+console.log(node.childNodes)<4>
+----
+[.columns]
+--
+<1> `Output : <div>`
+<2> `Output : <a>`
+<3> `Output : <img>`
+<4> `Output : NodeList -> length = 0`
+--
+
+[%auto-animate]
+=== Qui utiliser ?
+`value` :
+[%step]
+* Propriété spécifique pour les éléments de formulaire tels que les inputs, les textareas, etc
+* Permet de définir ou d'obtenir la valeur actuelle de l'élément de formulaire
+
+[%auto-animate]
+=== Qui utiliser ?
+`textContent` :
+[%step]
+* Propriété spécifique aux nœuds DOM qui représentent des éléments (comme `<div>`, `<p>`, `<span>`, etc.)
+* Renvoie le contenu textuel de l'élément et de tous ses descendants sous forme de texte brut
+* Utilisée pour récupérer ou définir le contenu textuel visible d'un élément, en ignorant tout balisage HTML présent à l'intérieur
+
+[%auto-animate]
+=== Qui utiliser ?
+`nodeValue` :
+[%step]
+* Propriété générale pour tous les nœuds DOM, pas seulement les éléments de formulaire
+* Permet d'accéder ou de définir la valeur du nœud DOM, qui peut être du texte, des commentaires, etc
+
