--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -7,6 +7,7 @@
 :revealjs_slideNumber: true
 :revealjs_history: true
 :revealjs_pdfseparatefragments: false
+:revealjs_width: 1080
 :customcss: css/custom.css
 
 
@@ -16,3 +17,4 @@ include::03_fonctions.adoc[]
 include::04_collections.adoc[]
 include::05_objets.adoc[]
 include::06_dom.adoc[]
+include::07_evenements.adoc[]
