Chapitre structure code

--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -18,3 +18,4 @@ include::04_collections.adoc[]
 include::05_objets.adoc[]
 include::06_dom.adoc[]
 include::07_evenements.adoc[]
+include::08_structure_code.adoc[]
