--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -19,3 +19,4 @@ include::05_objets.adoc[]
 include::06_dom.adoc[]
 include::07_evenements.adoc[]
 include::08_structure_code.adoc[]
+include::09_json.adoc[]
