--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -20,3 +20,4 @@ include::06_dom.adoc[]
 include::07_evenements.adoc[]
 include::08_structure_code.adoc[]
 include::09_json.adoc[]
+include::10_requetes_asynchrones.adoc[]
