--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -21,3 +21,4 @@ include::07_evenements.adoc[]
 include::08_structure_code.adoc[]
 include::09_json.adoc[]
 include::10_requetes_asynchrones.adoc[]
+include::11_aller_plus_loin.adoc[]
